add update inputs history
