# api/api.swagger.yaml
@@ -2628,7 +2628,7 @@ paths:
 
   /monitoring/tasks/block/{blockId}:
     put:
-      operationId: EditTaskBlockData
+      operationId: MonitoringUpdateTaskBlockData
       tags:
         - monitoring
       summary: Редактирование данных блока в мониторинге
@@ -2645,7 +2645,59 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MonitoringTaskEditBlockRequest'
+              $ref: '#/components/schemas/MonitoringTaskUpdateBlockRequest'
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/BlockEditResponse'
+                  status_code:
+                    type: integer
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/httpError'
+      x-codegen-request-body-name: variables
+
+  /monitoring/tasks/block/inputs:
+    put:
+      operationId: MonitoringUpdateBlockInputs
+      tags:
+        - monitoring
+      summary: Редактирование инпутов блока в мониторинге
+      description: Редактирование инпутов блока в мониторинге
+      requestBody:
+        description: updated data
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MonitoringUpdateBlockInputsRequest'
         required: true
       responses:
         200:
@@ -5606,12 +5658,12 @@ components:
           items:
             type: string
 
-    MonitoringTaskEditBlockRequest:
+    MonitoringTaskUpdateBlockRequest:
       type: object
       properties:
         change_type:
           type: string
-          enum: [ "state", "output", "context", "input" ]
+          enum: [ "state", "output", "context"]
           description: "Переменные в какой части блока редактируем"
         change_data:
           type: object
@@ -5621,6 +5673,24 @@ components:
       required:
         - change_type
         - change_data
+
+    MonitoringUpdateBlockInputsRequest:
+      type: object
+      properties:
+        work_id:
+          type: string
+          description: "uuid таски"
+        step_name:
+          type: string
+          description: "Имя блока"
+          example: "approver_0"
+        inputs:
+          type: object
+          description: "Мапа инпутов"
+      required:
+        - work_id
+        - step_name
+        - inputs
 
     MonitoringTask:
       type: object
